Fix "Sometimes scrollbar of prism shimmers through modal"
Fixes https://github.com/GHSVS-de/tpl_bs4ghsvs/issues/18

--- a/src/scss-ghsvs/prism-ghsvs.scss
+++ b/src/scss-ghsvs/prism-ghsvs.scss
@@ -17,6 +17,7 @@ pre[class*="language-"]
 	overflow: auto;
 
 	// Bugfix. Scrollbar des PRE überdeckt .sticky-top #CfButtonGruppe
+	position: relative;
 	z-index: 10;
 }
 
